# kraken-exchange-api-example

./: .dockerignore  .env.example  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: bdd-manual-dispatch.yml  ci.yml  clippy-fmt.yml  doc.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: config.rs  lib.rs
src/api/: errors.rs  mod.rs
src/domain/: asset.rs  asset_pair.rs  mod.rs  order.rs  time.rs
src/stonk/: config.rs.html  lib.rs.html
src/stonk/api/: errors.rs.html  mod.rs.html
src/stonk/domain/: asset.rs.html  mod.rs.html  order.rs.html  time.rs.html
stonk/: all.html  index.html  sidebar-items.js
stonk/api/: index.html  sidebar-items.js  struct.Api.html
stonk/config/: index.html  sidebar-items.js  struct.Config.html
stonk/domain/: index.html  sidebar-items.js  struct.ApiResult.html
stonk/domain/asset/: index.html  sidebar-items.js  struct.AssetPair.html
tests/: bdd.rs  config.rs  cucumber.rs
tests/context/: api.rs
tests/domain/: mod.rs  time.rs
tests/features/: time.feature
tests/steps/: common.rs  mod.rs
tests/support/: api.rs
(+18 files in other folders)
