[package]
name = "stonk"
version = "0.1.0"
authors = ["theredfish <did.julian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "bdd"
harness = false

[dev-dependencies]
cucumber_rust = { version = "0.8.2", features = ["macros"] }
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11.1"
serde = "1.0.123"
serde_json = "1.0.63"
url = "2.2.1"
chrono = "0.4.19"

[dependencies]
